--- a/tasks/get_token.yml
+++ b/tasks/get_token.yml
@@ -1,5 +1,10 @@
 ---
-- name: Revoke token
+- name: Log in (obtain access token)
   redhat.openshift.openshift_auth:
-    api_key: "{{ ocp_auth_api_key }}"
-    state: absent
+    username: "{{ ocp_auth_openshift_username }}"
+    password: "{{ ocp_auth_openshift_password }}"
+  register: openshift_auth_results
+
+- name: Set token fact
+  set_fact:
+    ocp_auth_api_key: "{{ openshift_auth_results.openshift_auth.api_key }}"
